--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -75,15 +75,16 @@ nav ul li {
 }
 
 /* About section */
-main{
-    max-width:1140px ;
+main {
+    max-width: 1140px;
     margin: 0 auto;
 }
+
 .about-me {
     background: #FFF8F3;
     border-radius: 10px;
     text-align: center;
-    padding:0 auto;
+    padding: 0 auto;
 }
 
 .section-title {
@@ -100,25 +101,26 @@ main{
     color: #757575;
     font-size: 18px;
     text-align: center;
-    padding:0 150px;
+    padding: 0 150px;
 }
-.more-info{
+
+.more-info {
     padding-bottom: 130px;
-    margin-bottom: 130px;
+
 }
 
 .more-info ul {
     display: flex;
     justify-content: space-evenly;
-   
-  
+
+
 }
 
 .more-info ul li {
     list-style: none;
 }
 
-.info-title{
+.info-title {
     color: #757575;
     font-size: 20px;
     padding-top: 30px;
@@ -128,4 +130,39 @@ main{
     color: #474747;
     font-weight: 700;
     font-size: 20px;
+}
+
+/* What I do section */
+/* .what-i-do{} */
+
+.description {
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 130px;
+}
+
+.skill-title {
+    color: #181818;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-description {
+    
+    color: #757575;
+
 }
