resume section completed

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,4 @@
 * {
-    margin: 0px;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -113,7 +112,6 @@ main {
     display: flex;
     justify-content: space-evenly;
 
-
 }
 
 .more-info ul li {
@@ -162,7 +160,54 @@ main {
 }
 
 .skill-description {
-    
-    color: #757575;
 
+    color: #757575;
 }
+
+/* Resume Styles */
+.resume-section-title{
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
+}
+.resume-contant {
+    display: flex;
+    gap: 24px;
+}
+
+.resume-title {
+    font-weight: 700;
+    font-size: 30px;
+    color: #474747;
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume .title {
+    font-weight: 700px;
+    font-size: 25px;
+    color: #474747;
+}
+
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.resume .description {
+    color: #757575;
+    padding: 0 0;
+}
+
+.resume-btn {
+    text-align: center;
+}
+
+/* Connect section */
