--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,7 +13,7 @@ header {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title {
